fix: z-index in main section

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -31,6 +31,7 @@
   grid-area: main;
   overflow: hidden;
   padding: 2em 1em;
+  z-index: 10;
 }
 
 .aside {
